# basic-pitch

./: CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
basic_pitch/: __init__.py  callbacks.py  constants.py  inference.py  models.py  note_creation.py  train.py  visualize.py
basic_pitch/data/: README.md
basic_pitch/data/datasets/: guitarset.py  ikala.py  maestro.py  medleydb_pitch.py  mirdata_compat.py  slakh.py
basic_pitch/layers/: signal.py
tests/: test_inference.py
tests/data/: test_mirdata_compat.py
