[project]
name = "basic-pitch"
version = "0.4.0"
description = "Basic Pitch, a lightweight yet powerful audio-to-MIDI converter with pitch bend detection."
readme = "README.md"
requires-python = ">=3.8,<3.13"
keywords = []
authors = [{ name = "Spotify", email = "basic-pitch@spotify.com" }]
maintainers = [{ name = "Spotify", email = "basic-pitch@spotify.com" }]
license = { file = "LICENSE" }
urls = { Homepage = "https://github.com/spotify/basic-pitch", Repository = "https://github.com/spotify/basic-pitch" }
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Natural Language :: English",
	"Operating System :: POSIX :: Linux",
	"Operating System :: MacOS :: MacOS X",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
	"coremltools; platform_system == 'Darwin'",
	"librosa>=0.10.1",
	"mir_eval>=0.8.2",
	"numpy>=1.24",
	"onnxruntime>=1.17; platform_system != 'Darwin'",
	"pretty_midi>=0.2.10",
	"resampy>=0.4.3",
	"scipy>=1.8.0",
	"tensorflow>=2.13,<3.0; platform_system != 'Darwin' and python_version >= '3.10'",
	"tensorflow-macos>=2.13,<3.0; platform_system == 'Darwin' and python_version >= '3.10'",
	"tf-keras>=2.16,<3.0; python_version >= '3.10'",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
namespaces = false

[project.scripts]
basic-pitch = "basic_pitch.predict:main"
bp-download = "basic_pitch.data.download:main"

[project.optional-dependencies]
data = [
    "basic_pitch[tf,test]",
    "apache_beam",
	# mirdata 0.3.9+ requires explicit index bootstrapping; 1.x still has unstable upstream dataset index delivery.
	"mirdata>=0.3.9,<1.0",
    "smart_open",
    "sox",
    "ffmpeg-python"
]
test = [
	"basic_pitch[data]",
	"coverage>=5.0.2",
	"pytest>=6.1.1",
	"pytest-mock",
	"mido"
]
tf = [
	"tensorflow>=2.13,<3.0; platform_system != 'Darwin'",
	"tensorflow-macos>=2.13,<3.0; platform_system == 'Darwin'",
	"tf-keras>=2.16,<3.0; python_version >= '3.10'",
]
coreml = ["coremltools"] 
onnx = ["onnxruntime"]
tflite = ["tflite-runtime; platform_system == 'Linux' and python_version < '3.12'"]
docs = ["mkdocs>=1.0.4"]
dev = [
	"basic_pitch[data,test,tf,coreml,onnx,tflite,docs]",
	"mypy",
	"tox",
]

[build-system]
requires = [
	"setuptools>=69",
	"wheel",
]
